--- a/package.json
+++ b/package.json
@@ -10,8 +10,36 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/geolocation": "^3.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.14",
+    "@react-navigation/native": "^6.1.12",
+    "@react-navigation/native-stack": "^6.9.20",
+    "@react-spring/native": "^9.7.3",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.5.0",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-native": "0.73.5",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-date-picker": "^4.3.7",
+    "react-native-deck-swiper": "^2.0.17",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-image-crop-picker": "^0.40.3",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.11.3",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
+    "react-tinder-card": "^1.6.4",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
