--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@turf/turf": "^6.5.0",
     "axios": "^1.5.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-app-intro-slider": "^4.0.4",
@@ -41,7 +42,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vector-icons": "^10.0.3",
+    "react-native-vector-icons": "^10.1.0",
     "react-redux": "^9.1.0",
     "react-tinder-card": "^1.6.4",
     "redux-persist": "^6.0.0",
